--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,33 @@
     <artifactId>cidsServer</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>cidsServer</name>    
+    <name>cidsServer</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>rmic-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <id>rmi compilation</id>
+                        <goals>
+                            <goal>rmic</goal>                           
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>                   
+                    <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <dependencies>
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismetCommons</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>             
+        </dependency>
         <!--ToDo use newest Version see issue0000892-->
         <dependency>
             <groupId>org.netbeans.api</groupId>
@@ -28,12 +48,12 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.0</version>
-        </dependency>   
+        </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.4</version>
-        </dependency>        
+        </dependency>
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismetGuiCommons</artifactId>
