--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                 <version>1.0</version>
                 <executions>
                     <execution>
-                        <id>rmi compilation</id>
+                        <id>rmi-compilation</id>
                         <goals>
                             <goal>rmic</goal>
                         </goals>
@@ -88,6 +88,7 @@
         <finalName>cidsServer</finalName>
     </build>
 </project>
+
 
 
 
