--- a/src/main/resources/Sirius/util/DBVersionChecker/Bundle.properties
+++ b/src/main/resources/Sirius/util/DBVersionChecker/Bundle.properties
@@ -1,6 +1,6 @@
 DOMVersionChecker.main(String[]).helpText=Usage:{0} a) PROG <configfile> generiere <new version name>{0} b) PROG <config file> version{0} c) PROG <config file> vergleiche <version name>{0}{0}    Note - in case a) the XML file, which is given by the configuration file,{0} will be created and must be added to the version list {0}
 DOMVersionChecker.DOMVersionChecker(String).error=Error while reading the configuration file:
-DOMVersionChecker.main(String[]).foundVersion=Found version:
+DOMVersionChecker.main(String[]).foundVersion=Found version: {0}
 DOMVersionChecker.main(String[])..noProperVersion=No proper definition found for the given database.
 DOMVersionChecker.main(String[]).accordanceFound=Complete conformity found.
 DOMVersionChecker.main(String[]).noAccordanceFound=The versions are not conform:
