--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,26 @@
             <artifactId>beansbinding</artifactId>
             <version>1.2.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-server</artifactId>
+            <version>1.1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.grizzly</groupId>
+            <artifactId>grizzly-servlet-webserver</artifactId>
+            <version>1.9.18-i</version>
+        </dependency>
+        <!--dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty</artifactId>
+            <version>6.1.16</version>
+        </dependency-->
     </dependencies>
 
     <build>
@@ -88,6 +108,7 @@
         <finalName>cidsServer</finalName>
     </build>
 </project>
+
 
 
 
