--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -19,7 +19,7 @@ rmiRegistryPort=1099
 connection.driver_class=org.postgresql.Driver
 connection.username=postgres
 connection.password=x
-connection.url=jdbc:postgresql://kif:5432/wunda_live
+connection.url=jdbc:postgresql://kif:5432/cids_reference_db_server_test
 connection.pool_size=5
 dialect=org.hibernate.dialect.PostgreSQLDialect
 iconDirectory=./icons
