--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -20,6 +20,7 @@ connection.driver_class=org.postgresql.Driver
 connection.username=postgres
 connection.password=x
 connection.url=jdbc:postgresql://kif:5432/cids_reference_db_server_test
+#connection.url=jdbc:postgresql://kif:5432/wunda_live
 connection.pool_size=5
 dialect=org.hibernate.dialect.PostgreSQLDialect
 iconDirectory=./icons
