[issue:1475] switched test rest port from default to 9987

--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -15,6 +15,7 @@ attributePolicy=STANDARD
 startMode=simple
 serverName=WUNDA_BLAU
 serverPort=8887
+restPort=9987
 rmiRegistryPort=1099
 connection.driver_class=org.postgresql.Driver
 connection.username=postgres
