--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -15,12 +15,13 @@ attributePolicy=STANDARD
 startMode=simple
 serverName=WUNDA_BLAU
 serverPort=8887
-restPort=9987
+
 rmiRegistryPort=1099
 connection.driver_class=org.postgresql.Driver
 connection.username=postgres
 connection.password=x
-connection.url=jdbc:postgresql://kif:5432/wunda_live
+connection.url=jdbc:postgresql://kif:5432/cids_reference_db
+#connection.url=jdbc:postgresql://kif:5432/wunda_live
 connection.pool_size=5
 dialect=org.hibernate.dialect.PostgreSQLDialect
 iconDirectory=./icons
@@ -30,6 +31,19 @@ fileSeparator=/
 registryIPs=localhost
 log4j_prop_file=runtime.properties
 quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
+
+## server's rest settings
+# ATTENTION: debug mode disables ssl and shall never be used in production use!
+# ATTENTION: enable is not set to true the server will always disable rest by default
+server.rest.enable=false
+server.rest.debug=false
+server.rest.port=9987
+server.rest.keystore.server=./cids-server-jetty.keystore
+server.rest.keystore.server.password=ax20b3y63
+server.rest.keystore.server.keypassword=345txfx97c
+server.rest.keystore.client.auth=false
+server.rest.keystore.client=./cids-server-client.keystore
+server.rest.keystore.client.password=b3vwi98zb
 
 ## miniServer.properties
 AliasesDefinitionFile_option=-a
