[issue:1556] pom changes for skipping reset-refsystem goal - added the skip parameter configuration in cids-maven-plugin definition to allow skipping the goal with the parameter Dmaven.test.skip=true while build

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
             <plugin>
                 <groupId>de.cismet.cids</groupId>
                 <artifactId>cids-maven-plugin</artifactId>
+                <version>1.5-SNAPSHOT</version>
                 <executions>
                     <execution>
                         <phase>generate-test-resources</phase>
@@ -94,6 +95,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <skip>${maven.test.skip}</skip>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
