--- a/pom.xml
+++ b/pom.xml
@@ -89,15 +89,16 @@
                 <version>1.5-SNAPSHOT</version>
                 <executions>
                     <execution>
+                        <id>cids-maven-plugin-reset-refsystem</id>
                         <phase>generate-test-resources</phase>
                         <goals>
                             <goal>reset-refsystem</goal>
                         </goals>
+                        <configuration>
+                            <skip>${maven.test.skip}</skip>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <skip>${maven.test.skip}</skip>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
