[issue:1651] extended server interface, added implementation and did some minor changes in format or some minor refactoring

--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -13,7 +13,7 @@ attributePolicy=STANDARD
 
 ## server.config
 startMode=simple
-serverName=WUNDA_BLAU
+serverName=LOCAL
 serverPort=8887
 
 rmiRegistryPort=1099
