--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -1,1 +1,6 @@
-verify_user_password=select count(*) from cs_usr where trim(lower(login_name)) = ? AND trim(lower(password)) = ?
+verify_user_password=SELECT count(*) FROM cs_usr WHERE trim(lower(login_name)) = ? AND trim(lower(password)) = ?
+fetch_domain_id_from_domain_string=SELECT id FROM cs_domain WHERE name = ?
+fetch_config_attr_key_id=SELECT id FROM cs_config_attr_key WHERE key = ?
+fetch_config_attr_user_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id = ? AND ug_id = ? AND dom_id = ? AND key_id = ?)
+fetch_config_attr_ug_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id IS NULL AND ug_id = ? AND dom_id = ? AND key_id = ?)
+fetch_config_attr_domain_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id IS NULL AND ug_id IS NULL AND dom_id = ? AND key_id = ?)
