--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -4,3 +4,6 @@ fetch_config_attr_key_id=SELECT id FROM cs_config_attr_key WHERE key = ?
 fetch_config_attr_user_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id = ? AND ug_id = ? AND dom_id = ? AND key_id = ?)
 fetch_config_attr_ug_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id IS NULL AND ug_id = ? AND dom_id = ? AND key_id = ?)
 fetch_config_attr_domain_value=SELECT value FROM cs_config_attr_value WHERE id = (SELECT val_id FROM cs_config_attr_jt WHERE usr_id IS NULL AND ug_id IS NULL AND dom_id = ? AND key_id = ?)
+fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC
+fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
+insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) V (?, ?, ?, ?, ?, ?)
