--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <groupId>de.cismet.cids</groupId>
@@ -122,18 +122,33 @@
                     <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>triemax</groupId>
-                <artifactId>jalopy-maven</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
         </plugins>
         <finalName>cidsServer</finalName>
     </build>
 
     <profiles>
+        <profile>
+            <id>local-test</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>de.cismet.cids</groupId>
+                        <artifactId>cids-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>cids-maven-plugin-reset-refsystem</id>
+                                <configuration>
+                                    <skip>true</skip>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
         <profile>
             <id>sudplan-runtime</id>
             <activation>
