--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>1.0.3</version>
+        <version>1.0.5</version>
     </parent>
 
     <groupId>de.cismet.cids</groupId>
@@ -85,6 +85,12 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>de.cismet</groupId>
+            <artifactId>remote-test-helper-service</artifactId>
+            <version>1.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -130,7 +136,8 @@
         <profile>
             <id>local-test</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <!-- don't reset until the reset works properly again -->
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
@@ -155,12 +162,12 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <dependencies>
-                <dependency>
+                <!--dependency>
                     <groupId>de.cismet.cids.custom.sudplan</groupId>
                     <artifactId>cids-custom-sudplan</artifactId>
                     <version>1.0-SNAPSHOT</version>
                     <scope>runtime</scope>
-                </dependency>
+                </dependency-->
                 <!-- cannot depend on transitive dependency resolution as the above dependency creates a cycle -->
                 <dependency>
                     <groupId>de.cismet.commons</groupId>
