--- a/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
+++ b/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
@@ -36,7 +36,7 @@ quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
 ## server's rest settings
 # ATTENTION: debug mode disables ssl and shall never be used in production use!
 # ATTENTION: enable is not set to true the server will always disable rest by default
-server.rest.enable=false
+server.rest.enable=true
 server.rest.debug=false
 server.rest.port=9987
 server.rest.keystore.server=./cids-server-jetty.keystore
