--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -37,7 +37,7 @@ quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
 # ATTENTION: debug mode disables ssl and shall never be used in production use!
 # ATTENTION: enable is not set to true the server will always disable rest by default
 server.rest.enable=false
-server.rest.debug=false
+server.rest.debug=true
 server.rest.port=9987
 server.rest.keystore.server=./cids-server-jetty.keystore
 server.rest.keystore.server.password=ax20b3y63
