--- a/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
+++ b/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
@@ -34,16 +34,24 @@ log4j_prop_file=runtime.properties
 quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
 
 ## server's rest settings
-# ATTENTION: debug mode disables ssl and shall never be used in production use!
-# ATTENTION: enable is not set to true the server will always disable rest by default
+# ATTENTION: if enable is not set to true the server will always disable rest by default
 server.rest.enable=true
+# ATTENTION: debug mode disables ssl and shall never be used in production use!
 server.rest.debug=true
+# the port on which the server listens for client connections
 server.rest.port=9987
+# the path to the keystore file where the server certificate resides
 server.rest.keystore.server=./cids-server-jetty.keystore
+# the password to access the server keystore file
 server.rest.keystore.server.password=ax20b3y63
+# the password to access the key of the server within the keystore file
 server.rest.keystore.server.keypassword=345txfx97c
+# ATTENTION: if client.auth is set to true any client that shall be able to connect must provide its certificate in the 
+#            client keystore file
 server.rest.keystore.client.auth=false
+# the path to the keystore file where the client certificates reside
 server.rest.keystore.client=./cids-server-client.keystore
+# the password to access the client keystore file
 server.rest.keystore.client.password=b3vwi98zb
 
 ## miniServer.properties
