[issue:2222][issue:2224] backwards compatibility adaption

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -8,3 +8,4 @@ fetch_history=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AN
 fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id = ? AND object_id = ? ORDER BY valid_from DESC LIMIT ?
 insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
 has_history=SELECT count(class_id) FROM cs_history WHERE class_id = ? AND object_id = ?
+table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid FROM pg_class WHERE relname = ?) AND attname = ?
