--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,24 @@
                     <outputDirectory>${project.build.outputDirectory}</outputDirectory>
                 </configuration>
             </plugin>
+            <plugin>
+               <artifactId>maven-assembly-plugin</artifactId>
+               <version>2.2</version>
+               <configuration>
+                   <descriptors>
+                       <descriptor>src/main/resources/dist.xml</descriptor>
+                   </descriptors>
+               </configuration>
+               <executions>
+                   <execution>
+                       <id>assemble</id>
+                       <goals>
+                           <goal>single</goal>
+                       </goals>
+                       <phase>package</phase>
+                   </execution>
+               </executions>
+           </plugin> 
         </plugins>
         <finalName>cidsServer</finalName>
     </build>
