[issue:2233] stringrepcache Trigger impl

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -9,3 +9,7 @@ fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id 
 insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
 has_history=SELECT count(class_id) FROM cs_history WHERE class_id = ? AND object_id = ?
 table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid FROM pg_class WHERE relname = ?) AND attname = ?
+delete_stringrepcacheentry=delete from cs_stringrepcache where class_id=? and object_id=?
+insert_stringrepcacheentry=insert into cs_stringrepcache (class_id,object_id,stringrep) values(?,?,?)
+update_stringrepcacheentry=update cs_stringrepcache set stringrep=? where class_id=? and object_id=?
+        
