--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.2-pre4</version>
+        </dependency>
     </dependencies>
 
     <build>
