some code cleanups

--- a/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
+++ b/src/test/resources/de/cismet/cids/server/ws/rest/runtime.properties
@@ -22,7 +22,6 @@ connection.username=postgres
 connection.password=x
 ## db created by test
 connection.url=jdbc:postgresql://kif:5432/restful_serial_interface_connector_test_db
-#connection.url=jdbc:postgresql://kif:5432/wunda_live
 connection.pool_size=5
 dialect=org.hibernate.dialect.PostgreSQLDialect
 iconDirectory=./icons
@@ -41,18 +40,18 @@ server.rest.debug=true
 # the port on which the server listens for client connections
 server.rest.port=9987
 # the path to the keystore file where the server certificate resides
-server.rest.keystore.server=./cids-server-jetty.keystore
+server.rest.keystore.server=
 # the password to access the server keystore file
-server.rest.keystore.server.password=ax20b3y63
+server.rest.keystore.server.password=
 # the password to access the key of the server within the keystore file
-server.rest.keystore.server.keypassword=345txfx97c
+server.rest.keystore.server.keypassword=
 # ATTENTION: if client.auth is set to true any client that shall be able to connect must provide its certificate in the 
 #            client keystore file
 server.rest.keystore.client.auth=false
 # the path to the keystore file where the client certificates reside
-server.rest.keystore.client=./cids-server-client.keystore
+server.rest.keystore.client=
 # the password to access the client keystore file
-server.rest.keystore.client.password=b3vwi98zb
+server.rest.keystore.client.password=
 
 ## miniServer.properties
 AliasesDefinitionFile_option=-a
