--- a/src/test/resources/Sirius/server/localserver/object/runtime.properties
+++ b/src/test/resources/Sirius/server/localserver/object/runtime.properties
@@ -39,12 +39,12 @@ quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
 server.rest.enable=false
 server.rest.debug=true
 server.rest.port=9987
-server.rest.keystore.server=./cids-server-jetty.keystore
-server.rest.keystore.server.password=ax20b3y63
-server.rest.keystore.server.keypassword=345txfx97c
+server.rest.keystore.server=
+server.rest.keystore.server.password=
+server.rest.keystore.server.keypassword=
 server.rest.keystore.client.auth=false
-server.rest.keystore.client=./cids-server-client.keystore
-server.rest.keystore.client.password=b3vwi98zb
+server.rest.keystore.client=
+server.rest.keystore.client.password=
 
 ## miniServer.properties
 AliasesDefinitionFile_option=-a
