--- a/src/test/resources/Sirius/server/sql/runtime.properties
+++ b/src/test/resources/Sirius/server/sql/runtime.properties
@@ -22,7 +22,6 @@ connection.username=postgres
 connection.password=x
 ## db created by test
 connection.url=jdbc:postgresql://kif:5432/dbconnection_test_db
-#connection.url=jdbc:postgresql://kif:5432/wunda_live
 connection.pool_size=5
 dialect=org.hibernate.dialect.PostgreSQLDialect
 iconDirectory=./icons
@@ -39,12 +38,12 @@ quotedTypes=1;3;45;47;71;25;29;78;79;80;81;82;180;269
 server.rest.enable=false
 server.rest.debug=true
 server.rest.port=9987
-server.rest.keystore.server=./cids-server-jetty.keystore
-server.rest.keystore.server.password=ax20b3y63
-server.rest.keystore.server.keypassword=345txfx97c
+server.rest.keystore.server=
+server.rest.keystore.server.password=
+server.rest.keystore.server.keypassword=
 server.rest.keystore.client.auth=false
-server.rest.keystore.client=./cids-server-client.keystore
-server.rest.keystore.client.password=b3vwi98zb
+server.rest.keystore.client=
+server.rest.keystore.client.password=
 
 ## miniServer.properties
 AliasesDefinitionFile_option=-a
