[issue #11] turned get usergroups into an internal query and changed depending code

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -12,4 +12,4 @@ table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid F
 delete_stringrepcacheentry=delete from cs_stringrepcache where class_id=? and object_id=?
 insert_stringrepcacheentry=insert into cs_stringrepcache (class_id,object_id,stringrep) values(?,?,?)
 update_stringrepcacheentry=update cs_stringrepcache set stringrep=? where class_id=? and object_id=?
-        
+get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
