--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -16,3 +16,4 @@ get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.do
 get_all_classes=select c.id, c.name ,descr,class_icon_id,object_icon_id,table_name,primary_key_field,indexed,toStringClass.qualifier as toStringQualifier,EditorClass.qualifier as EditorQualifier,RendererClass.qualifier as RendererQualifier,c.array_link,c.policy,c.attribute_policy  from cs_class as c  left outer join cs_java_class as toStringClass on (c.tostring =toStringClass.id) left outer join cs_java_class as EditorClass on (c.editor=EditorClass.id) left outer join cs_java_class as RendererClass on (c.renderer=RendererClass.id)
 get_all_class_attributes=select * from cs_class_attr
 get_all_methods=select * from cs_method
+get_all_images=select * from cs_icon
