[issue #12] internalised get_all_users

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -17,3 +17,4 @@ get_all_classes=select c.id, c.name ,descr,class_icon_id,object_icon_id,table_na
 get_all_class_attributes=select * from cs_class_attr
 get_all_methods=select * from cs_method
 get_all_images=select * from cs_icon
+get_all_users=select id,login_name,password,last_pwd_change,administrator from cs_usr
