[issue #12] internalised get_all_memberships

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -18,3 +18,4 @@ get_all_class_attributes=select * from cs_class_attr
 get_all_methods=select * from cs_method
 get_all_images=select * from cs_icon
 get_all_users=select id,login_name,password,last_pwd_change,administrator from cs_usr
+get_all_memberships=select login_name, ug.name as ug , 'LOCAL' as ugDomain  from cs_ug_membership as m,cs_usr as u ,cs_ug as ug  where u.id=m.usr_id and ug.id=m.ug_id
