--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -19,3 +19,4 @@ get_all_methods=select * from cs_method
 get_all_images=select * from cs_icon
 get_all_users=select id,login_name,password,last_pwd_change,administrator from cs_usr
 get_all_memberships=select login_name, ug.name as ug , 'LOCAL' as ugDomain  from cs_ug_membership as m,cs_usr as u ,cs_ug as ug  where u.id=m.usr_id and ug.id=m.ug_id
+change_user_password=update cs_usr set password = '?', last_pwd_change = 'now' where lower(login_name) = '?' AND lower(password) = '?'
