--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -21,3 +21,4 @@ get_all_users=select id,login_name,password,last_pwd_change,administrator from c
 get_all_memberships=select login_name, ug.name as ug , 'LOCAL' as ugDomain  from cs_ug_membership as m,cs_usr as u ,cs_ug as ug  where u.id=m.usr_id and ug.id=m.ug_id
 change_user_password=update cs_usr set password = '?', last_pwd_change = 'now' where lower(login_name) = '?' AND lower(password) = '?'
 get_all_class_permissions=select ug.name as ug_name, d.name  as domainname,cp.permission , p.key,cp.class_id,cp.ug_id  as ug_id from cs_ug_class_perm cp ,cs_permission p,cs_ug as ug , cs_domain as d where cp.permission=p.id and cp.ug_id = ug.id  and ug.domain=d.id
+get_all_method_permissions=select distinct m.method_id, plugin_id, u.id as ug_id , d.name as ls  from cs_ug_method_perm as p,cs_method  as m, cs_ug as u,cs_domain as d  where m.id =p.method_id and u.id=p.ug_id and u.domain=d.id
