--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -13,13 +13,13 @@ delete_stringrepcacheentry=delete from cs_stringrepcache where class_id=? and ob
 insert_stringrepcacheentry=insert into cs_stringrepcache (class_id,object_id,stringrep) values(?,?,?)
 update_stringrepcacheentry=update cs_stringrepcache set stringrep=? where class_id=? and object_id=?
 get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
-get_all_classes=select c.id, c.name ,descr,class_icon_id,object_icon_id,table_name,primary_key_field,indexed,toStringClass.qualifier as toStringQualifier,EditorClass.qualifier as EditorQualifier,RendererClass.qualifier as RendererQualifier,c.array_link,c.policy,c.attribute_policy  from cs_class as c  left outer join cs_java_class as toStringClass on (c.tostring =toStringClass.id) left outer join cs_java_class as EditorClass on (c.editor=EditorClass.id) left outer join cs_java_class as RendererClass on (c.renderer=RendererClass.id)
-get_all_class_attributes=select * from cs_class_attr
-get_all_methods=select * from cs_method
-get_all_images=select * from cs_icon
-get_all_users=select id,login_name,password,last_pwd_change,administrator from cs_usr
-get_all_memberships=select login_name, ug.name as ug , 'LOCAL' as ugDomain  from cs_ug_membership as m,cs_usr as u ,cs_ug as ug  where u.id=m.usr_id and ug.id=m.ug_id
-change_user_password=update cs_usr set password = '?', last_pwd_change = 'now' where lower(login_name) = '?' AND lower(password) = '?'
-get_all_class_permissions=select ug.name as ug_name, d.name  as domainname,cp.permission , p.key,cp.class_id,cp.ug_id  as ug_id from cs_ug_class_perm cp ,cs_permission p,cs_ug as ug , cs_domain as d where cp.permission=p.id and cp.ug_id = ug.id  and ug.domain=d.id
-get_all_method_permissions=select distinct m.method_id, plugin_id, u.id as ug_id , d.name as ls  from cs_ug_method_perm as p,cs_method  as m, cs_ug as u,cs_domain as d  where m.id =p.method_id and u.id=p.ug_id and u.domain=d.id
-get_attribute_info=select a.*,ts.qualifier as toStringString,e.qualifier as editor_class,s.qualifier as from_string_class , ce.qualifier as complexeditorclass  from cs_attr as a  left outer join cs_java_class as e on( editor = e.id )  left outer join cs_java_class as s on(from_string = s.id ) left outer join cs_java_class as ce on(complex_editor = ce.id ) left outer join cs_java_class as ts  on(a.tostring = ts.id ) order by a.class_id, a.pos
+get_all_classes=SELECT c.id, c.name, descr, class_icon_id, object_icon_id, table_name, primary_key_field, indexed, toStringClass.qualifier AS toStringQualifier, EditorClass.qualifier AS EditorQualifier, RendererClass.qualifier AS RendererQualifier, c.array_link, c.policy, c.attribute_policy FROM cs_class AS c LEFT OUTER JOIN cs_java_class AS toStringClass ON (c.tostring = toStringClass.id) LEFT OUTER JOIN cs_java_class AS EditorClass ON (c.editor = EditorClass.id) LEFT OUTER JOIN cs_java_class AS RendererClass ON (c.renderer = RendererClass.id)
+get_all_class_attributes=SELECT * FROM cs_class_attr
+get_all_methods=SELECT * FROM cs_method
+get_all_images=SELECT * FROM cs_icon
+get_all_users=SELECT id, login_name, password, last_pwd_change, administrator FROM cs_usr
+get_all_memberships=SELECT login_name, ug.name AS ug, 'LOCAL' AS ugDomain FROM cs_ug_membership AS m, cs_usr AS u, cs_ug AS ug WHERE u.id = m.usr_id AND ug.id = m.ug_id
+change_user_password=UPDATE cs_usr SET password = '?', last_pwd_change = 'now' WHERE lower(login_name) = '?' AND lower(password) = '?'
+get_all_class_permissions=SELECT ug.name AS ug_name, d.name AS domainname, cp.permission, p.key, cp.class_id, cp.ug_id AS ug_id FROM cs_ug_class_perm cp, cs_permission p, cs_ug AS ug, cs_domain AS d WHERE cp.permission = p.id AND cp.ug_id = ug.id AND ug.domain = d.id
+get_all_method_permissions=SELECT DISTINCT m.method_id, plugin_id, u.id AS ug_id ,d.name AS ls FROM cs_ug_method_perm AS p, cs_method AS m, cs_ug AS u, cs_domain AS d WHERE m.id = p.method_id AND u.id = p.ug_id AND u.domain = d.id
+get_attribute_info=SELECT a.*, ts.qualifier AS toStringString, e.qualifier AS editor_class, s.qualifier AS from_string_class, ce.qualifier AS complexeditorclass FROM cs_attr AS a LEFT OUTER JOIN cs_java_class AS e ON (editor = e.id) LEFT OUTER JOIN cs_java_class AS s ON (from_string = s.id) LEFT OUTER JOIN cs_java_class AS ce ON (complex_editor = ce.id) LEFT OUTER JOIN cs_java_class AS ts ON (a.tostring = ts.id) ORDER BY a.class_id, a.pos
