--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.cismet.cids</groupId>
         <artifactId>cids-parent</artifactId>
-        <version>2.0-SNAPSHOT</version>
+        <version>2.0</version>
     </parent>
 
     <groupId>de.cismet.cids</groupId>
@@ -47,12 +47,12 @@
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismet-commons</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0-b20130305-1</version>
         </dependency>
            <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismet-gui-commons</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>2.0-b20130305-1</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
