--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.cismet.cids</groupId>
     <artifactId>cids-server</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-b20130305-1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>cids Server</name>
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>de.cismet.commons</groupId>
             <artifactId>cismet-commons</artifactId>
-            <version>2.0-b20130305-1</version>
+            <version>2.0-b20130305-1.0.1</version>
         </dependency>
            <dependency>
             <groupId>de.cismet.commons</groupId>
