--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.cismet.cids</groupId>
     <artifactId>cids-server</artifactId>
-    <version>2.0-b20130305-1.0.1-SNAPSHOT</version>
+    <version>2.0-b20130305-1.0.1</version>
     <packaging>jar</packaging>
 
     <name>cids Server</name>
