working on #143: initial steps

--- a/src/main/resources/Sirius/server/sql/Bundle.properties
+++ b/src/main/resources/Sirius/server/sql/Bundle.properties
@@ -10,9 +10,9 @@ fetch_history_limit=SELECT json_data, valid_from FROM cs_history WHERE class_id 
 insert_history_entry=INSERT INTO cs_history (class_id, object_id, usr_id, ug_id, valid_from, json_data) VALUES (?, ?, ?, ?, ?, ?)
 has_history=SELECT count(class_id) FROM cs_history WHERE class_id = ? AND object_id = ?
 table_has_column=SELECT attname FROM pg_attribute WHERE attrelid = (SELECT oid FROM pg_class WHERE relname = ?) AND attname = ?
-delete_stringrepcacheentry=delete from cs_stringrepcache where class_id=? and object_id=?
-insert_stringrepcacheentry=insert into cs_stringrepcache (class_id,object_id,stringrep) values(?,?,?)
-update_stringrepcacheentry=update cs_stringrepcache set stringrep=? where class_id=? and object_id=?
+delete_stringrepcacheentry=delete from cs_cache where class_id=? and object_id=?
+insert_stringrepcacheentry=insert into cs_cache (class_id,object_id,stringrep) values(?,?,?)
+update_stringrepcacheentry=update cs_cache set stringrep=? where class_id=? and object_id=?
 get_all_usergroups=SELECT ug.id AS id, ug.name AS name, ug.descr AS descr, ug.domain AS domain, ug.prio AS prio, d.name AS domain_name FROM cs_ug ug LEFT OUTER JOIN cs_domain d ON ug.domain = d.id ORDER BY ug.name
 get_all_classes=SELECT c.id, c.name, descr, class_icon_id, object_icon_id, table_name, primary_key_field, indexed, toStringClass.qualifier AS toStringQualifier, EditorClass.qualifier AS EditorQualifier, RendererClass.qualifier AS RendererQualifier, c.array_link, c.policy, c.attribute_policy FROM cs_class AS c LEFT OUTER JOIN cs_java_class AS toStringClass ON (c.tostring = toStringClass.id) LEFT OUTER JOIN cs_java_class AS EditorClass ON (c.editor = EditorClass.id) LEFT OUTER JOIN cs_java_class AS RendererClass ON (c.renderer = RendererClass.id)
 get_all_class_attributes=SELECT * FROM cs_class_attr
